# GPT_Image_2_Application

./: .gitignore  CLAUDE_CODE_PROJECT_SPEC.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  storage.rs  task_runner.rs
src/components/: AccountUsageCharts.tsx  ContextMeter.css  ContextMeter.tsx  DeleteConvDialog.css  DeleteConvDialog.tsx  DeleteTaskDialog.css  DeleteTaskDialog.tsx  EditTaskModal.css  EditTaskModal.tsx  ErrorBoundary.tsx  MarqueeNotice.css  MarqueeNotice.tsx  Sidebar.css  Sidebar.tsx  SuccessDialog.css  SuccessDialog.tsx  TokenField.css  TokenField.tsx  TokenInfoDialog.css  TokenInfoDialog.tsx  UpdateNotification.css  UpdateNotification.tsx  VersionModal.css  VersionModal.tsx
src/pages/: About.css  About.tsx  Account.css  Account.tsx  Auth.css  Auth.tsx  Chat.css  Chat.tsx  CreateTask.css  CreateTask.tsx  Gallery.css  Gallery.tsx  History.css  History.tsx  ImageEdit.css  ImageEdit.tsx  Settings.css  Settings.tsx  TaskQueue.css  TaskQueue.tsx
src/services/: api.ts  serverApi.ts  updateService.ts
src/store/: useAuthStore.ts  useChatStore.ts  useDraftStore.ts  useImageStore.ts  useSettingsStore.ts  useTaskStore.ts  useUpdateStore.ts
src/types/: index.ts  tauri.d.ts
src/utils/: agentConfig.ts  agentIntent.ts  errors.ts
src/utils/agent/: agentActionRouter.ts  agentPatterns.ts  galleryCriteria.ts  (+2 more)
项目图库/: chatgpt.html  vision_test.html
