[package]
name = "gpt-image-batch-generator"
version = "3.0.2"
edition = "2021"

[lib]
name = "gpt_image_batch_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "native-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
opener = "0.7"
once_cell = "1"
image = "0.25"
md5 = "0.7"
dirs = "5"
